fix: set width overflow hidden on body

--- a/src/index.css
+++ b/src/index.css
@@ -7,9 +7,12 @@
 html {
   scroll-behavior: smooth;
   overflow-x: hidden;
+  width: 100vw;
 }
 
 body {
+  overflow-x: hidden;
+  width: 100vw;
   font-family: "Lato", sans-serif;
 }
 
